[package]
name = "drive"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "e"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
axum = "0.7.4"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.145"

utoipa = {version = "4.2.0", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

env_logger = "0.11.8"
log = "0.4.28"

mime_guess = "2.0.5" # download.rs